--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ TODO LIST :
 
 - Inscription / Connexion ✅
 - Ajout d'un plat ✅
-- Récupérer les plats et mettre en forme ❌
+- Récupérer les plats et mettre en forme ✅
+- Gérer le fait qu'un utilisateur puisse partager plusieurs plats
 - Modification page de profil (PUT/PATCH)
 - Corriger toutes les erreurs de console
