--- a/TODO
+++ b/TODO
@@ -4,5 +4,11 @@ TODO LIST :
 - Ajout d'un plat ✅
 - Récupérer les plats et mettre en forme ✅
 - Gérer le fait qu'un utilisateur puisse partager plusieurs plats ✅
-- Modification page de profil (PUT/PATCH)
-- Corriger toutes les erreurs de console
+- Modification page de profil (PUT/PATCH) ✅
+- Trouver méthode pour gérer le format date (Naissance et Livraison)
+- Mettre en place le système de commande de plats (jetons, enlever une part/plat etc...)
+- Modifier une commande en cours
+- Chat ?
+- Gérer les notifications
+- Session de l'utilisateur/connexion automatique
+- Améliorer le code (optimisation possible)
