--- a/TODO
+++ b/TODO
@@ -8,7 +8,9 @@ TODO LIST :
 - Trouver méthode pour gérer le format date (Naissance et Livraison)
 - Mettre en place le système de commande de plats (jetons, enlever une part/plat etc...)
 - Modifier une commande en cours
+- Modification email et mot de passe
 - Chat ?
 - Gérer les notifications
 - Session de l'utilisateur/connexion automatique
+- Confirmation par email
 - Améliorer le code (optimisation possible)
